# Crypto-profit-Dashboard

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  app.py  data_fetcher.py  data_generator.py  database.py  init_db.py  init_git.bat  main.py  pyproject.toml  requirements.txt  setup.py  terminal  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-test.yml
.streamlit/: config.toml
src/: app.py  data_fetcher.py  database.py  requirements.txt  utils.py
tests/: test_utils.py
